--- a/fj/fitness_jerk/templates/fitness_jerk/profile.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/profile.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}PROFILE{% endblock %}
+
 {% block content %}
 
-<h1>TEST</h1>
+<h1>USER PROFILE</h1>
 
 {% endblock %}
