--- a/fb/fitbastards/static/profile.css
+++ b/fb/fitbastards/static/profile.css
@@ -1,18 +1,91 @@
-*{
+* {
     margin: 0;
-    font-family: sans-serif;
     box-sizing: border-box;
+}
+
+.message {
+    background-color: #dff0d8;
+    border: 1px solid #d6e9c6;
+    color: #3c763d;
+    padding: 10px;
+    margin-bottom: 10px;
+    position: relative;
+    animation: message 2s forwards;
+}
+@keyframes message {
+    100% { 
+        display: none; 
+    }
+}
+
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+}
+
+.navbar h1 {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.dropdown {
+    float: right;
+}
+
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    
+}
+
+.dropdown-content a {
+
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 .profile {
     padding: 10px;
 }
 
+.member-progress {
+    display: block;
+    margin:auto;
+    width: fit-content;
+    
 
+}
 
-
-.member-progress h2{
-    font-weight: 400;
+.member-progress h2 {
     letter-spacing: 1px;
     margin-top: 40px;
     margin-bottom: 15px;
@@ -22,7 +95,7 @@
 
 }
 
-.progress-bar{
+.progress-bar {
     background: #959595;
     width: 600px;
     height: 10px;
@@ -30,14 +103,14 @@
     margin-left: 15px;
 }
 
-.progress-bar div{
+.progress-bar div {
     height: 10px;
     border-radius: 5px;
     width: 0%;
-    
+
 }
 
-.progress-bar div span{
+.progress-bar div span {
     height: 40px;
     width: 40px;
     border-radius: 50%;
@@ -54,14 +127,41 @@
 
 }
 
-.progress{
-    
+.progress {
+
     background: rgb(100, 248, 1);
     animation: progress 1s linear forwards;
 }
 
-@keyframes progress{
+.workout {
+    margin-top: 30px;
+    display: flex;
+    width:fit-content;
+    align-items: center;
+    
+}
+
+.workout a {
+    text-decoration: none;
+}
+
+.wo1, .wo2, .wo3 {
+    width:30%;
+    align-items: center;
+    margin:auto;
+    border: 1px solid black;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.workout img {
+    width: 100%;
+    text-align: center;
+}
+
+@keyframes progress {
     100% {
         width: var(--width);
     }
 }
+
