--- a/fb/fitbastards/templates/profile.html
+++ b/fb/fitbastards/templates/profile.html
@@ -8,7 +8,23 @@
     <title>Document</title>
 </head>
 <body>
+    {% for message in messages %}
+        <p class="message">{{ message }}</p>
+    {% endfor %}
+
+    <div class="navbar">
+        <div class="dropdown">
+            <button class="dropbtn">Dropdown</button>
+            <div class="dropdown-content">
+                <a href="{% url 'settings' member.id%}">Settings</a>
+                <a href="{% url 'logout' %}">Logout</a>
+            </div>
+        </div> 
+    </div>
     <div class="profile">
+        {% if member.image %}
+            <img src="{{member.image.url}}" alt="profile-image" style="width: 150px;">
+        {% endif %}
         <h1>{{member.username}}</h1>
         <p>Height: {{ member.height }} m</p>
         <p>Weight: {{ member.weight }} kg</p>
@@ -19,6 +35,16 @@
         <div class="progress-bar">
             <div class="progress" style="--width: {{ progress }};"><span>{{ progress }}</span></div>
         </div>
+    </div>
+    <div class="post">
+        {% for post in posts %}
+            <li>{{ post.post }}</li>
+        {% endfor %}
+    </div>
+    <div class="workout">
+        <div class="wo1"><a href="{% url 'finish' member.id%}"><img src="{% static 'LOOSE.png' %}" alt=""></a></div>
+        <div class="wo2"><a href=""><img src="{% static 'TONE.png' %}" alt=""></a></div>
+        <div class="wo3"><a href=""><img src="{% static 'MUSCLE.png' %}" alt=""></a></div>
     </div>
     
 </body>
