--- a/fj/fitness_jerk/templates/registration/complete_profile.html
+++ b/fj/fitness_jerk/templates/registration/complete_profile.html
@@ -5,5 +5,11 @@
 {% block content %}
 
 <h1>COMPLETE PROFILE</h1>
+<form action="">
+    {% csrf_token %}
+    {{ form }}
+    <input type="submit" value="Complete registration">
+</form>
+    <a href="{% url 'profile' %}">Skip</a>
 
-{% endblock %}
+    {% endblock %}
