--- a/fj/fitness_jerk/templates/registration/login.html
+++ b/fj/fitness_jerk/templates/registration/login.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h1>SIGNIN</h1>
 <h2>Inspirational Quote</h2>
-<form method="post">
+<form action="" method="post">
     {% csrf_token %}
     {{ form }}
     <button type="submit">Log In</button>
