--- a/fb/fitbastards/templates/profile.html
+++ b/fb/fitbastards/templates/profile.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'profile.css' %}">
-    <title>Document</title>
+    <title>PROFILE</title>
 </head>
 <body>
+
     {% for message in messages %}
         <p class="message">{{ message }}</p>
     {% endfor %}
-
     <div class="navbar">
         <div class="dropdown">
             <button class="dropbtn">Dropdown</button>
             <div class="dropdown-content">
-                <a href="{% url 'settings' member.id%}">Settings</a>
+                <a href="{% url 'settings' %}">Settings</a>
                 <a href="{% url 'logout' %}">Logout</a>
             </div>
         </div> 
@@ -25,10 +25,13 @@
         {% if member.image %}
             <img src="{{member.image.url}}" alt="profile-image" style="width: 150px;">
         {% endif %}
-        <h1>{{member.username}}</h1>
+        <h1>{{user.username}}</h1>
+        
         <p>Height: {{ member.height }} m</p>
         <p>Weight: {{ member.weight }} kg</p>
         <p>BMI: {{ BMI }}</p>
+        <p>Progress: {{ progress }}</p>
+        
     </div>
     <div class="member-progress">
         <h2>PROGRESS</h2>
@@ -42,12 +45,11 @@
         {% endfor %}
     </div>
     <div class="workout">
-        <div class="wo1"><a href="{% url 'finish' member.id%}"><img src="{% static 'LOOSE.png' %}" alt=""></a></div>
+        <div class="wo1"><a href="{% url 'finish' %}"><img src="{% static 'LOOSE.png' %}" alt=""></a></div>
         <div class="wo2"><a href=""><img src="{% static 'TONE.png' %}" alt=""></a></div>
         <div class="wo3"><a href=""><img src="{% static 'MUSCLE.png' %}" alt=""></a></div>
     </div>
-    
+
 </body>
 </html>
-
 
