Customized Password Reset V.0.0.1

--- a/fj/fitness_jerk/templates/registration/login.html
+++ b/fj/fitness_jerk/templates/registration/login.html
@@ -10,7 +10,7 @@
     {{ form }}
     <button type="submit">Log In</button>
   </form>
-<a href="{% url 'passwd_reset' %}">Forgot your password?</a><br>
+<a href="{% url 'password_reset' %}">Forgot your password?</a><br>
 <a href="{% url 'signup' %}">JOIN</a>
 
 {% endblock %}
