--- a/fj/fitness_jerk/templates/registration/signup.html
+++ b/fj/fitness_jerk/templates/registration/signup.html
@@ -24,5 +24,6 @@
             {% endif %}
     <input type="submit" value="Signup">
   </form>
-  <a href="{% url 'login' %}">BACK</a>
+  <a href="{% url 'login' %}">Sign In</a>
+  
 {% endblock %}
