--- a/fj/fitness_jerk/templates/fitness_jerk/profile.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/profile.html
@@ -16,8 +16,10 @@
         <div class="dropdown">
             <button class="dropbtn">Dropdown</button>
             <div class="dropdown-content">
+                <a href="{% url 'profile' %}">Profile</a>
                 <a href="{% url 'settings' user.id%}">Settings</a>
                 <a href="{% url 'logout' %}">Logout</a>
+                <a href="{% url 'password_change' %}">Password Reset</a>
             </div>
         </div> 
     </div>
