--- a/fj/fitness_jerk/templates/fitness_jerk/settings.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/settings.html
@@ -12,7 +12,9 @@
         <div class="dropdown">
             <button class="dropbtn">Dropdown</button>
             <div class="dropdown-content">
+                <a href="{% url 'profile' %}">Profile</a>
                 <a href="">Settings</a>
+                <a href="{% url 'password_change' %}">Change Password</a>
                 <a href="{% url 'logout' %}">Logout</a>
             </div>
         </div> 
