--- a/fj/fitness_jerk/static/css/profile.css
+++ b/fj/fitness_jerk/static/css/profile.css
@@ -12,9 +12,10 @@
     position: relative;
     animation: message 2s forwards;
 }
+
 @keyframes message {
-    100% { 
-        display: none; 
+    100% {
+        display: none;
     }
 }
 
@@ -53,7 +54,7 @@
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    
+
 }
 
 .dropdown-content a {
@@ -79,9 +80,9 @@
 
 .member-progress {
     display: block;
-    margin:auto;
+    margin: auto;
     width: fit-content;
-    
+
 
 }
 
@@ -136,19 +137,21 @@
 .workout {
     margin-top: 30px;
     display: flex;
-    width:fit-content;
+    width: fit-content;
     align-items: center;
-    
+
 }
 
 .workout a {
     text-decoration: none;
 }
 
-.wo1, .wo2, .wo3 {
-    width:30%;
+.wo1,
+.wo2,
+.wo3 {
+    width: 30%;
     align-items: center;
-    margin:auto;
+    margin: auto;
     border: 1px solid black;
     text-align: center;
     margin-bottom: 30px;
@@ -164,4 +167,3 @@
         width: var(--width);
     }
 }
-
