--- a/fj/fitness_jerk/templates/fitness_jerk/settings.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/settings.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'settings.css' %}">
+    <link rel="stylesheet" href="{% static 'css/settings.css' %}">
     <title>Settings</title>
 </head>
 <body>
@@ -35,7 +35,7 @@
             <br><br>
             <input type="submit" value="Update">
             <br><br>
-            <p>Click <a href="{% url 'delete' context.member.id %}">here</a> if you would to delete your account.</p>
+            <p>Click <a href="{% url 'delete' %}">here</a> if you would to delete your account.</p>
         </form>
     </div>
     
