--- a/fj/fitness_jerk/templates/registration/change_password.html
+++ b/fj/fitness_jerk/templates/registration/change_password.html
@@ -8,4 +8,6 @@
     {{ form.as_p }}
     <button type="submit">Change my password</button>
   </form>
+<a href="{% url 'profile' %}">Go Back</a>
+
 {% endblock %}
