--- a/fj/templates/base.html
+++ b/fj/templates/base.html
@@ -1,14 +1,21 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    {% block head %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %} Document {% endblock %}</title>
-</head>
-<body>
-
-    {% block content %}
+    <title>{% block title %}base{% endblock %}</title>
+    <script src="{% static 'timer_js.js' %}"></script>
     {% endblock %}
+</head>
 
+<body>
+    {% block content %}
+    {% include 'fitness_jerk/navbar_profile.html' %}
+    {% endblock %}
+    <script src="{% static 'navbar_js.js' %}"></script>
 </body>
+
 </html>
