--- a/fj/fitness_jerk/static/css/navbar_css.css
+++ b/fj/fitness_jerk/static/css/navbar_css.css
@@ -34,14 +34,15 @@ body {
     margin: 30px;
 }
 
-#joinus-btn {
+#joinus-btn,
+#logout-btn {
     background-color: #d19b4e;
     border-radius: 10px;
     padding: 5px;
-
 }
 
-#joinus-btn a {
+#joinus-btn a,
+#logout-btn a {
     text-decoration: none;
     color: #fff;
     font-weight: bold;
@@ -62,9 +63,6 @@ body {
     justify-content: space-between;
     align-items: center;
 }
-
-
-
 
 @media (max-width: 768px) {
     .menu-icon {
