--- a/fj/fitness_jerk/templates/fitness_jerk/profile.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/profile.html
@@ -1,53 +1,51 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/profile.css' %}">
-    <title>Document</title>
-</head>
-<body>
-    {% for message in messages %}
-        <p class="message">{{ message }}</p>
-    {% endfor %}
 
-    <div class="navbar">
-        <div class="dropdown">
-            <button class="dropbtn">Dropdown</button>
-            <div class="dropdown-content">
-                <a href="{% url 'profile' %}">Profile</a>
-                <a href="{% url 'settings' %}">Settings</a>
-                <a href="{% url 'logout' %}">Logout</a>
-                <a href="{% url 'password_change' %}">Password Reset</a>
+{% block content %}
+<link rel="stylesheet" href="{% static 'css/profile.css' %}">
+{% for message in messages %}
+<p class="message">{{ message }}</p>
+{% endfor %}
+<div class="profile">
+    {% if user.profile.image %}
+    <img src="{{member.image.url}}" alt="profile-image" style="width: 150px;">
+    {% endif %}
+    <h1>{{user.username}}</h1>
+    <p>Height: {{ user.members.height }} m</p>
+    <p>Weight: {{ user.members.weight }} kg</p>
+    <p>BMI: {{ BMI }}</p>
+</div>
+<div class="member-progress">
+    <h2>PROGRESS</h2>
+    <div class="progress-bar">
+        <div class="progress" style="--width: {{ progress }};"><span>{{ progress }}</span></div>
+    </div>
+</div>
+<div class="post">
+    {% for post in posts %}
+    <li>{{ post.post }}</li>
+    {% endfor %}
+</div>
+<div class="workout">
+    <!-- <d class="weight">
+            <div class="wo1"><a href="{% url 'exercise_loose' %}"><img src="{% static 'LOOSE.png' %}" alt=""></a></div>
+        </d>
+        <div class="tone">
+            <div class="wo2"><a href="{% url 'exercise_tone' %}"><img src="{% static 'TONE.png' %}" alt=""></a></div>
+        </div> -->
+    <!-- <div class="muscles">
+            <div class="wo3"><a href="{% url 'exercise_muscles' %}"><img src="{% static 'MUSCLE.png' %}" alt=""></a>
             </div>
-        </div> 
+        </div> -->
+
+    <div class="muscles"><a href="{% url 'exercise_muscles' %}">
+            <img class="logo" src="{% static 't_build_muscles.png' %}" alt="">
+            <img class="front-image" src="{% static 'fg_muscles.png' %}" alt="">
+            <img class="bg-muscles" src="{% static 'bg_chubby.jpeg' %}" alt="">
+        </a>
     </div>
-    <div class="profile">
-        {% if user.profile.image %}
-            <img src="{{member.image.url}}" alt="profile-image" style="width: 150px;">
-        {% endif %}
-        <h1>{{user.username}}</h1>
-        <p>Height: {{ user.members.height }} m</p>
-        <p>Weight: {{ user.members.weight }} kg</p>
-        <p>BMI: {{ BMI }}</p>
-    </div>
-    <div class="member-progress">
-        <h2>PROGRESS</h2>
-        <div class="progress-bar">
-            <div class="progress" style="--width: {{ progress }};"><span>{{ progress }}</span></div>
-        </div>
-    </div>
-    <div class="post">
-        {% for post in posts %}
-            <li>{{ post.post }}</li>
-        {% endfor %}
-    </div>
-    <div class="workout">
-        <div class="wo1"><a href="{% url 'exercise_loose' %}""><img src="{% static 'LOOSE.png' %}" alt=""></a></div>
-        <div class="wo2"><a href="{% url 'exercise_tone' %}"><img src="{% static 'TONE.png' %}" alt=""></a></div>
-        <div class="wo3"><a href="{% url 'exercise_muscles' %}"><img src="{% static 'MUSCLE.png' %}" alt=""></a></div>
-    </div>
-    
-</body>
-</html>
+</div>
+</div>
+<script src="{% static 'navbar_js.js' %}"></script>
+
+{% endblock %}
