--- a/fj/fitness_jerk/templates/registration/login.html
+++ b/fj/fitness_jerk/templates/registration/login.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %}
+{% extends 'fitness_jerk/base.html' %}
+{% load static %}
 
 {% block title %}SIGNIN{% endblock %}
 
@@ -6,10 +7,10 @@
 <h1>SIGNIN</h1>
 <h2>Inspirational Quote</h2>
 <form action="" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit">Log In</button>
-  </form>
+  {% csrf_token %}
+  {{ form }}
+  <button type="submit">Log In</button>
+</form>
 <a href="{% url 'password_reset' %}">Forgot your password?</a><br>
 <a href="{% url 'signup' %}">JOIN</a>
 
