--- a/fj/fitness_jerk/templates/fitness_jerk/base.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/base.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}base{% endblock %}</title>
     <script src="{% static 'timer_js.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+
     {% endblock %}
 </head>
 
@@ -15,7 +18,6 @@
     {% include 'fitness_jerk/navbar_profile.html' %}
     {% block content %}
     {% endblock %}
-    <script src="{% static 'navbar_js.js' %}"></script>
 </body>
 
 </html>
