--- a/fj/fitness_jerk/templates/fitness_jerk/settings.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/settings.html
@@ -1,10 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'fitness_jerk/base.html' %}
 {% load static %}
 
+{% block title %}User Settings{% endblock %}
 {% block content %}
-
-<link rel="stylesheet" href="{% static 'css/settings.css' %}">
-
 
 
 <div class="profile">
