--- a/fj/fitness_jerk/templates/fitness_jerk/exercise_tone.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/exercise_tone.html
@@ -1,6 +1,4 @@
-
-{% extends 'base.html' %}
-
+{% extends 'fitness_jerk/base.html' %}
 {% load static %}
 
 {% block title %}Training Loose It All!{% endblock %}
