--- a/fj/fitness_jerk/templates/registration/login.html
+++ b/fj/fitness_jerk/templates/registration/login.html
@@ -6,8 +6,11 @@
 
 {% block content %}
 
+<div class="quote-small">
+  <p>NOTHING IS IMPOSSIBLE</p>
+</div>
 <div class="quote-text">
-  <h2>REACH YOUR GOALS</h2>
+  <h2>REACH YOUR<br>GOALS</h2>
 </div>
 
 <div class="login-menu" id="login-menu">
