--- a/fj/fitness_jerk/static/css/styles.css
+++ b/fj/fitness_jerk/static/css/styles.css
@@ -23,7 +23,8 @@ body {
 
 body {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     height: 100%;
     margin-left: 10px;
     margin-right: 10px;
@@ -31,6 +32,74 @@ body {
     background-image: linear-gradient(rgba(15, 15, 15, 1), rgb(14, 14, 14, .95));
     background-repeat: no-repeat;
 }
+
+/*------------Landing Page ------------*/
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    outline: 3px solid red;
+
+}
+
+.landing-page {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+}
+
+.outer-box {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25%;
+    aspect-ratio: 1;
+    outline: 25px solid #d19b4e;
+    transform: rotate(-20deg);
+    border-radius: 30px;
+    z-index: -1;
+}
+
+.land-text {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 5vw;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+@media (max-width: 768px) {
+    .landing-page {
+        width: 60%;
+    }
+
+    .outer-box {
+        width: 50%;
+        outline: 12px solid #d19b4e;
+    }
+
+    .land-text {
+        font-size: 6vw;
+    }
+}
+
+
 
 /*------------settings/profile---------*/
 .profile {
@@ -48,93 +117,6 @@ input[type="submit"] {
 }
 
 /*-----------user/profile-------------*/
-
-
-
-/*-----------navbar-------------------*/
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    /* background-color: #141414; */
-}
-
-.navbar-left .main-logo {
-    font-size: 24px;
-    font-weight: bold;
-    color: white;
-    text-decoration: none;
-}
-
-.navbar-right {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-.nav-item {
-    color: white;
-    font-size: 16px;
-    text-decoration: none;
-    transition: color 0.3s;
-    margin: 12px;
-}
-
-#joinus-btn,
-#profile-btn {
-    background-color: #d19b4e;
-    border-radius: 18px;
-    padding: 5px;
-}
-
-#joinus-btn a,
-#profile-btn a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-}
-
-.nav-item:hover {
-    color: #b3b3b3;
-}
-
-.menu-icon {
-    display: none;
-    font-size: 28px;
-    cursor: pointer;
-}
-
-.nav-menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-@media (max-width: 768px) {
-    .menu-icon {
-        display: block;
-    }
-
-    .nav-menu {
-        display: none;
-        flex-direction: column;
-        position: absolute;
-        top: 60px;
-        right: 20px;
-        background-color: #141414;
-        border: 1px solid #333;
-        padding: 10px;
-    }
-
-    .nav-item {
-        margin: 10px 0;
-    }
-
-    .nav-menu.active {
-        display: flex;
-    }
-}
 
 
 
@@ -372,7 +354,8 @@ img {
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"],
+input[type="email"] {
     width: 100%;
     padding: 5px;
     border: 1px solid #ccc;
@@ -476,97 +459,6 @@ button {
         outline: 3px solid limegreen;
         padding: 10px;
     }
-
-
-
-
-    /*-----------navbar-------------------*/
-    .navbar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 20px;
-        /* background-color: #141414; */
-        border-bottom: 1px solid #333;
-    }
-
-    .navbar-left .main-logo {
-        font-size: 24px;
-        font-weight: bold;
-        color: white;
-        text-decoration: none;
-    }
-
-    .navbar-right {
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-    }
-
-    .nav-item {
-        color: white;
-        font-size: 16px;
-        text-decoration: none;
-        transition: color 0.3s;
-        margin: 12px;
-    }
-
-    #joinus-btn,
-    #profile-btn {
-        background-color: #d19b4e;
-        border-radius: 18px;
-        padding: 5px;
-    }
-
-    #joinus-btn a,
-    #profile-btn a {
-        text-decoration: none;
-        color: #fff;
-        font-weight: bold;
-    }
-
-    .nav-item:hover {
-        color: #b3b3b3;
-    }
-
-    .menu-icon {
-        display: none;
-        font-size: 16px;
-        cursor: pointer;
-    }
-
-    .nav-menu {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    @media (max-width: 768px) {
-        .menu-icon {
-            display: block;
-        }
-
-        .nav-menu {
-            display: none;
-            flex-direction: column;
-            position: absolute;
-            top: 60px;
-            right: 20px;
-            background-color: #141414;
-            border: 1px solid #333;
-            padding: 10px;
-        }
-
-        .nav-item {
-            margin: 10px 0;
-        }
-
-        .nav-menu.active {
-            display: flex;
-        }
-    }
-
-
 
     /*--------------------------Card css------------------------*/
     .workout {
