--- a/fb/fitbastards/templates/base.html
+++ b/fb/fitbastards/templates/base.html
@@ -1,16 +1,18 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    {% block head %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block link %}<link rel="stylesheet"  href="{% static 'base.css' %}">{% endblock %}
-    <title>{% block title %} Document {% endblock %}</title>
-</head>
-<body>
-
-    {% block content %}
+    <title>{% block title %}base{% endblock %}</title>
+    <script src="{% static 'timer.js' %}"></script>
     {% endblock %}
+</head>
 
+<body>
+    {% block content %}{% endblock %}
 </body>
+
 </html>
