--- a/fj/fitness_jerk/static/css/navbar_css.css
+++ b/fj/fitness_jerk/static/css/navbar_css.css
@@ -1,18 +1,3 @@
-* {
-    gap: 1rem;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(rgba(15, 15, 15, 1), rgba(14, 14, 14, 0.95));
-    background-repeat: no-repeat;
-}
-
 .navbar {
     width: 100%;
     display: flex;
@@ -93,11 +78,12 @@ body {
         display: none;
         flex-direction: column;
         position: absolute;
-        top: 60px;
-        right: 20px;
+        top: 35px;
+        right: 0px;
         background-color: #141414;
         border: 1px solid #333;
         padding: 10px;
+        gap: 1rem;
     }
 
     .nav-item {
@@ -106,5 +92,6 @@ body {
 
     .nav-menu.active {
         display: flex;
+        width: 100px;
     }
 }
