--- a/fj/fitness_jerk/templates/fitness_jerk/base.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/base.html
@@ -15,9 +15,13 @@
 </head>
 
 <body>
-    {% include 'fitness_jerk/navbar_profile.html' %}
-    {% block content %}
-    {% endblock %}
+    <div class="navbar">
+        {% include 'fitness_jerk/navbar_profile.html' %}
+    </div>
+    <div class="container">
+        {% block content %}
+        {% endblock %}
+    </div>
 </body>
 
 </html>
