--- a/fj/fitness_jerk/templates/fitness_jerk/landing_page.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/landing_page.html
@@ -12,6 +12,13 @@
     </div>
 
     <div class="outer-box"></div>
+    <p class="about-text">
+        A Message from Your Fit Future Self: Welcome To FitBastards, Your Ultimate Personal Trainer App.
+        Hey there,
+
+        I know this might sound a bit unusual...
+        <br></b><a href="{% url 'about' %}" class="learn-more-btn">Learn More ></a>
+    </p>
 
 </div>
 
