--- a/fj/fitness_jerk/static/css/styles.css
+++ b/fj/fitness_jerk/static/css/styles.css
@@ -11,7 +11,7 @@
     box-sizing: border-box;
     perspective: 1500px;
     font-family: 'Inter', sans-serif;
-    color: white;
+    text-decoration: none;
 }
 
 html,
@@ -25,13 +25,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    margin-left: 10px;
-    margin-right: 10px;
     padding: 2px;
-    background-image: linear-gradient(rgba(15, 15, 15, 1), rgb(14, 14, 14, .95));
+    background-image: linear-gradient(rgba(4, 30, 42, 1), rgb(30, 3, 14, .50));
     background-repeat: no-repeat;
 }
+
 
 .container {
     display: flex;
@@ -39,19 +37,43 @@ body {
     height: 90%;
     width: 90%;
     flex-direction: column;
-    outline: 3px solid red;
     position: relative;
+}
+
+.footer {
+    background: whitesmoke;
+    height: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    z-index: -3;
+}
+
+.copyright {
+    display: flex;
+    justify-content: space-evenly;
+    color: black;
+    text-decoration: none;
+    gap: 2rem;
+    padding: 8px;
+}
+
+.copyright a {
+    color: black;
 }
 
 /*------------Landing Page ------------*/
 .image-container {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
     overflow: hidden;
-    outline: 3px solid red;
 
 }
 
@@ -83,8 +105,6 @@ body {
 }
 
 
-
-
 .land-text {
     position: absolute;
     display: flex;
@@ -95,11 +115,40 @@ body {
     width: 100%;
     height: 100%;
     text-align: center;
+    color: whitesmoke;
+}
+
+
+.about-text {
+    position: absolute;
+    font-weight: bold;
+    bottom: 180px;
+    left: 0;
+    height: 8rem;
+    width: 320px;
+    padding: 10px;
+    color: whitesmoke;
+    font-size: 20px;
+}
+
+.learn-more-btn {
+    display: inline-block;
+    margin-top: 20px;
+    color: whitesmoke;
+    outline: 3px solid whitesmoke;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.learn-more-btn:hover {
+    color: #292929;
 }
 
 @media (max-width: 768px) {
     .landing-page {
-        width: 90%;
+        width: 100%;
     }
 
     .outer-box {
@@ -111,9 +160,27 @@ body {
         font-size: 6vw;
     }
 
+    .quote-small {
+        margin-top: 5%;
+    }
 
+    .about-text {
+        bottom: 30%;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 70%;
+        /* Adjust width for smaller screens */
+        text-align: center;
+    }
+
+    .learn-more-btn {
+        display: block;
+        margin-top: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+    }
 }
-
 
 
 /*------------settings/profile---------*/
@@ -375,7 +442,7 @@ img {
     background-color: white;
     border-radius: 16px;
     padding: 20px;
-    box-shadow: 0px 5px 12px #d19b4e;
+    box-shadow: 0px 5px 12px #292929;
     width: 300px;
 }
 
@@ -421,6 +488,10 @@ button {
     text-decoration: none;
 }
 
+.links a {
+    color: white;
+}
+
 .password-reset {
     font-size: 16px;
     margin-top: 10px;
@@ -452,37 +523,6 @@ button {
         --timing: 800ms;
         --rotation: 20deg;
     }
-
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-
-    * {
-        margin: 0;
-        padding: 0px;
-        box-sizing: border-box;
-        perspective: 1500px;
-        font-family: 'Inter', sans-serif;
-        color: white;
-    }
-
-    html,
-    body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-    }
-
-    body {
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        margin-left: 10px;
-        margin-right: 10px;
-        padding: 2px;
-        background-image: linear-gradient(rgba(15, 15, 15, 1), rgb(14, 14, 14, .95));
-        background-repeat: no-repeat;
-    }
-
-
 
     /*------------settings/profile---------*/
     .profile {
