--- a/fj/fitness_jerk/templates/fitness_jerk/base.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/base.html
@@ -22,6 +22,13 @@
         {% block content %}
         {% endblock %}
     </div>
+    <div class="footer">
+        <p class="copyright">
+            © 2024-2024 FITNESS software that rocks!
+            <a href="#">Impressum</a>
+            <a href="#">Datenschutz</a>
+        </p>
+    </div>
 </body>
 
 </html>
