--- a/fj/fitness_jerk/templates/fitness_jerk/countdown.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/countdown.html
@@ -11,4 +11,5 @@
 <div id="timer"></div>
 <button id="pause-resume-btn">Pause</button>
 <button id="finish-btn">Finish</button>
+<script src="{% static 'navbar_js.js' %}"></script>
 {% endblock %}
