--- a/fj/fitness_jerk/templates/fitness_jerk/delete.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/delete.html
@@ -17,5 +17,7 @@
             <input type="submit" value="Delete">
         </div>
     </form>
+    <script src="{% static 'navbar_js.js' %}"></script>
 </div>
+
 {% endblock %}
