--- a/fj/fitness_jerk/templates/fitness_jerk/exercise_muscles.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/exercise_muscles.html
@@ -27,4 +27,5 @@
 <div id="timer"></div> <!-- Initialize with 30 seconds -->
 
 <script src="{% static 'timer_js.js' %}"></script>
+<script src="{% static 'navbar_js.js' %}"></script>
 {% endblock %}
